[gd_scene load_steps=11 format=3 uid="uid://btnf3bbaaowe6"]

[ext_resource type="Texture2D" uid="uid://sacdca68rcvi" path="res://assets/Backgrounds/lvl1.png" id="1_d2ykx"]
[ext_resource type="Script" path="res://game/background.gd" id="1_eu22v"]
[ext_resource type="Texture2D" uid="uid://bxphmp5f0p8ry" path="res://assets/Backgrounds/lvl2.png" id="2_x2p0x"]
[ext_resource type="Texture2D" uid="uid://7x4pydabsu21" path="res://assets/Backgrounds/lvl3.png" id="3_lyaqo"]
[ext_resource type="Texture2D" uid="uid://vasvu3ojdih6" path="res://assets/Backgrounds/lvl4.png" id="4_8v8c8"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_d2mnv"]
texture = ExtResource("1_d2ykx")
texture_region_size = Vector2i(256, 256)
use_texture_padding = false
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4qc2r"]
texture = ExtResource("2_x2p0x")
texture_region_size = Vector2i(256, 256)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0iluy"]
texture = ExtResource("3_lyaqo")
texture_region_size = Vector2i(256, 256)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0j3n8"]
texture = ExtResource("4_8v8c8")
texture_region_size = Vector2i(256, 256)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_8jnc4"]
tile_size = Vector2i(256, 256)
sources/0 = SubResource("TileSetAtlasSource_d2mnv")
sources/1 = SubResource("TileSetAtlasSource_4qc2r")
sources/2 = SubResource("TileSetAtlasSource_0iluy")
sources/3 = SubResource("TileSetAtlasSource_0j3n8")

[node name="Background" type="Node2D"]
script = ExtResource("1_eu22v")

[node name="BG1TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_8jnc4")
format = 2
layer_0/tile_data = PackedInt32Array(-1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, -65517, 0, 0, -65516, 0, 0, -65515, 0, 0, 65535, 0, 0, 131071, 0, 0, 196607, 0, 0, 262143, 0, 0, 327679, 0, 0, 393215, 0, 0, 458751, 0, 0, 524287, 0, 0, 589823, 0, 0, 655359, 0, 0, 720895, 0, 0, 786431, 0, 0, 851967, 0, 0, 917503, 0, 0, 983039, 0, 0, 1048575, 0, 0, 1114111, 0, 0, 1048576, 0, 0, 983041, 0, 0, 917506, 0, 0, 917507, 0, 0, 851972, 0, 0, 786437, 0, 0, 720902, 0, 0, 655367, 0, 0, 655368, 0, 0, 589833, 0, 0, 524298, 0, 0, 458763, 0, 0, 393228, 0, 0, 327693, 0, 0, 327694, 0, 0, 262159, 0, 0, 196624, 0, 0, 131089, 0, 0, 65554, 0, 0, 65555, 0, 0, 20, 0, 0, 21, 0, 0, 65557, 0, 0, 131093, 0, 0, 196629, 0, 0, 262165, 0, 0, 327701, 0, 0, 393237, 0, 0, 458773, 0, 0, 524309, 0, 0, 589845, 0, 0, 655381, 0, 0, 720917, 0, 0, 786453, 0, 0, 851989, 0, 0, 917525, 0, 0, 983061, 0, 0, 1048577, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 0, 0, 1048590, 0, 0, 1048591, 0, 0, 1048592, 0, 0, 1048593, 0, 0, 1048594, 0, 0, 1048595, 0, 0, 1048596, 0, 0, 1048597, 0, 0, 983060, 0, 0, 917523, 0, 0, 917522, 0, 0, 851985, 0, 0, 786448, 0, 0, 720911, 0, 0, 720910, 0, 0, 655373, 0, 0, 589836, 0, 0, 524299, 0, 0, 458761, 0, 0, 393224, 0, 0, 327687, 0, 0, 327686, 0, 0, 262149, 0, 0, 196612, 0, 0, 131075, 0, 0, 131074, 0, 0, 65537, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 65556, 0, 0, 131092, 0, 0, 196628, 0, 0, 262164, 0, 0, 327700, 0, 0, 393236, 0, 0, 458772, 0, 0, 524308, 0, 0, 589844, 0, 0, 655380, 0, 0, 720916, 0, 0, 786452, 0, 0, 851988, 0, 0, 917524, 0, 0, 983059, 0, 0, 983058, 0, 0, 983057, 0, 0, 983056, 0, 0, 983055, 0, 0, 983054, 0, 0, 983053, 0, 0, 983052, 0, 0, 983051, 0, 0, 983050, 0, 0, 983049, 0, 0, 983048, 0, 0, 983047, 0, 0, 983046, 0, 0, 983045, 0, 0, 983044, 0, 0, 983043, 0, 0, 983042, 0, 0, 983040, 0, 0, 917504, 0, 0, 851968, 0, 0, 786432, 0, 0, 720896, 0, 0, 655360, 0, 0, 589824, 0, 0, 524288, 0, 0, 458752, 0, 0, 393216, 0, 0, 327680, 0, 0, 262144, 0, 0, 196608, 0, 0, 131072, 0, 0, 65536, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 131090, 0, 0, 196626, 0, 0, 262162, 0, 0, 327698, 0, 0, 393234, 0, 0, 458770, 0, 0, 524307, 0, 0, 589843, 0, 0, 655379, 0, 0, 720915, 0, 0, 786451, 0, 0, 851987, 0, 0, 851986, 0, 0, 786450, 0, 0, 720914, 0, 0, 655378, 0, 0, 589842, 0, 0, 524306, 0, 0, 458771, 0, 0, 393235, 0, 0, 327699, 0, 0, 262163, 0, 0, 196627, 0, 0, 131091, 0, 0, 131088, 0, 0, 131087, 0, 0, 131086, 0, 0, 131085, 0, 0, 131080, 0, 0, 131079, 0, 0, 131078, 0, 0, 131077, 0, 0, 131076, 0, 0, 131073, 0, 0, 196609, 0, 0, 196610, 0, 0, 131081, 0, 0, 131083, 0, 0, 131084, 0, 0, 131082, 0, 0, 196615, 0, 0, 196614, 0, 0, 196613, 0, 0, 196611, 0, 0, 262147, 0, 0, 262146, 0, 0, 262145, 0, 0, 262148, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196625, 0, 0, 262161, 0, 0, 262160, 0, 0, 262158, 0, 0, 262157, 0, 0, 262150, 0, 0, 262155, 0, 0, 262156, 0, 0, 262154, 0, 0, 262153, 0, 0, 262152, 0, 0, 262151, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 393233, 0, 0, 393232, 0, 0, 393231, 0, 0, 393230, 0, 0, 393222, 0, 0, 393221, 0, 0, 393220, 0, 0, 393219, 0, 0, 393218, 0, 0, 393217, 0, 0, 393223, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393229, 0, 0, 458754, 0, 0, 458753, 0, 0, 458760, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458766, 0, 0, 458762, 0, 0, 524297, 0, 0, 524296, 0, 0, 524295, 0, 0, 458758, 0, 0, 458757, 0, 0, 458756, 0, 0, 458755, 0, 0, 458765, 0, 0, 458764, 0, 0, 458759, 0, 0, 524291, 0, 0, 524290, 0, 0, 524289, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524301, 0, 0, 524300, 0, 0, 589832, 0, 0, 589831, 0, 0, 589830, 0, 0, 524294, 0, 0, 524293, 0, 0, 524292, 0, 0, 655363, 0, 0, 589827, 0, 0, 589826, 0, 0, 589825, 0, 0, 655361, 0, 0, 720897, 0, 0, 786433, 0, 0, 851969, 0, 0, 917505, 0, 0, 851970, 0, 0, 786434, 0, 0, 720898, 0, 0, 655362, 0, 0, 720899, 0, 0, 786435, 0, 0, 851971, 0, 0, 786436, 0, 0, 720900, 0, 0, 655364, 0, 0, 589828, 0, 0, 589829, 0, 0, 655365, 0, 0, 720901, 0, 0, 655366, 0, 0, 786441, 0, 0, 720905, 0, 0, 655369, 0, 0, 655370, 0, 0, 589834, 0, 0, 589835, 0, 0, 655371, 0, 0, 720907, 0, 0, 720906, 0, 0, 786442, 0, 0, 851978, 0, 0, 851977, 0, 0, 851976, 0, 0, 786440, 0, 0, 720904, 0, 0, 720903, 0, 0, 786439, 0, 0, 786438, 0, 0, 851974, 0, 0, 851973, 0, 0, 917509, 0, 0, 917508, 0, 0, 917510, 0, 0, 917511, 0, 0, 851975, 0, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 851979, 0, 0, 786443, 0, 0, 786444, 0, 0, 720908, 0, 0, 655372, 0, 0, 720909, 0, 0, 786445, 0, 0, 851981, 0, 0, 851980, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 851982, 0, 0, 786446, 0, 0, 786447, 0, 0, 851983, 0, 0, 917519, 0, 0, 917520, 0, 0, 851984, 0, 0, 917521, 0, 0, 655376, 0, 0, 589840, 0, 0, 589839, 0, 0, 589838, 0, 0, 589837, 0, 0, 655374, 0, 0, 655375, 0, 0, 589841, 0, 0, 655377, 0, 0, 720913, 0, 0, 720912, 0, 0, 786449, 0, 0)

[node name="BG2TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_8jnc4")
format = 2
layer_0/tile_data = PackedInt32Array(-1, 1, 0, -65536, 1, 0, -65535, 1, 0, -65534, 1, 0, -65533, 1, 0, -65532, 1, 0, -65531, 1, 0, -65530, 1, 0, -65529, 1, 0, -65528, 1, 0, -65527, 1, 0, -65526, 1, 0, -65525, 1, 0, -65524, 1, 0, -65523, 1, 0, -65522, 1, 0, -65521, 1, 0, -65520, 1, 0, -65519, 1, 0, -65518, 1, 0, -65517, 1, 0, -65516, 1, 0, -65515, 1, 0, 65535, 1, 0, 131071, 1, 0, 196607, 1, 0, 262143, 1, 0, 327679, 1, 0, 393215, 1, 0, 458751, 1, 0, 524287, 1, 0, 589823, 1, 0, 655359, 1, 0, 720895, 1, 0, 786431, 1, 0, 851967, 1, 0, 917503, 1, 0, 983039, 1, 0, 1048575, 1, 0, 1114111, 1, 0, 1048576, 1, 0, 983041, 1, 0, 917506, 1, 0, 917507, 1, 0, 851972, 1, 0, 786437, 1, 0, 720902, 1, 0, 655367, 1, 0, 655368, 1, 0, 589833, 1, 0, 524298, 1, 0, 458763, 1, 0, 393228, 1, 0, 327693, 1, 0, 327694, 1, 0, 262159, 1, 0, 196624, 1, 0, 131089, 1, 0, 65554, 1, 0, 65555, 1, 0, 20, 1, 0, 21, 1, 0, 65557, 1, 0, 131093, 1, 0, 196629, 1, 0, 262165, 1, 0, 327701, 1, 0, 393237, 1, 0, 458773, 1, 0, 524309, 1, 0, 589845, 1, 0, 655381, 1, 0, 720917, 1, 0, 786453, 1, 0, 851989, 1, 0, 917525, 1, 0, 983061, 1, 0, 1048577, 1, 0, 1048578, 1, 0, 1048579, 1, 0, 1048580, 1, 0, 1048581, 1, 0, 1048582, 1, 0, 1048583, 1, 0, 1048584, 1, 0, 1048585, 1, 0, 1048586, 1, 0, 1048587, 1, 0, 1048588, 1, 0, 1048589, 1, 0, 1048590, 1, 0, 1048591, 1, 0, 1048592, 1, 0, 1048593, 1, 0, 1048594, 1, 0, 1048595, 1, 0, 1048596, 1, 0, 1048597, 1, 0, 983060, 1, 0, 917523, 1, 0, 917522, 1, 0, 851985, 1, 0, 786448, 1, 0, 720911, 1, 0, 720910, 1, 0, 655373, 1, 0, 589836, 1, 0, 524299, 1, 0, 458761, 1, 0, 393224, 1, 0, 327687, 1, 0, 327686, 1, 0, 262149, 1, 0, 196612, 1, 0, 131075, 1, 0, 131074, 1, 0, 65537, 1, 0, 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 65556, 1, 0, 131092, 1, 0, 196628, 1, 0, 262164, 1, 0, 327700, 1, 0, 393236, 1, 0, 458772, 1, 0, 524308, 1, 0, 589844, 1, 0, 655380, 1, 0, 720916, 1, 0, 786452, 1, 0, 851988, 1, 0, 917524, 1, 0, 983059, 1, 0, 983058, 1, 0, 983057, 1, 0, 983056, 1, 0, 983055, 1, 0, 983054, 1, 0, 983053, 1, 0, 983052, 1, 0, 983051, 1, 0, 983050, 1, 0, 983049, 1, 0, 983048, 1, 0, 983047, 1, 0, 983046, 1, 0, 983045, 1, 0, 983044, 1, 0, 983043, 1, 0, 983042, 1, 0, 983040, 1, 0, 917504, 1, 0, 851968, 1, 0, 786432, 1, 0, 720896, 1, 0, 655360, 1, 0, 589824, 1, 0, 524288, 1, 0, 458752, 1, 0, 393216, 1, 0, 327680, 1, 0, 262144, 1, 0, 196608, 1, 0, 131072, 1, 0, 65536, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 65553, 1, 0, 131090, 1, 0, 196626, 1, 0, 262162, 1, 0, 327698, 1, 0, 393234, 1, 0, 458770, 1, 0, 524307, 1, 0, 589843, 1, 0, 655379, 1, 0, 720915, 1, 0, 786451, 1, 0, 851987, 1, 0, 851986, 1, 0, 786450, 1, 0, 720914, 1, 0, 655378, 1, 0, 589842, 1, 0, 524306, 1, 0, 458771, 1, 0, 393235, 1, 0, 327699, 1, 0, 262163, 1, 0, 196627, 1, 0, 131091, 1, 0, 131088, 1, 0, 131087, 1, 0, 131086, 1, 0, 131085, 1, 0, 131080, 1, 0, 131079, 1, 0, 131078, 1, 0, 131077, 1, 0, 131076, 1, 0, 131073, 1, 0, 196609, 1, 0, 196610, 1, 0, 131081, 1, 0, 131083, 1, 0, 131084, 1, 0, 131082, 1, 0, 196615, 1, 0, 196614, 1, 0, 196613, 1, 0, 196611, 1, 0, 262147, 1, 0, 262146, 1, 0, 262145, 1, 0, 262148, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 1, 0, 196621, 1, 0, 196622, 1, 0, 196623, 1, 0, 196625, 1, 0, 262161, 1, 0, 262160, 1, 0, 262158, 1, 0, 262157, 1, 0, 262150, 1, 0, 262155, 1, 0, 262156, 1, 0, 262154, 1, 0, 262153, 1, 0, 262152, 1, 0, 262151, 1, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327695, 1, 0, 327696, 1, 0, 327697, 1, 0, 393233, 1, 0, 393232, 1, 0, 393231, 1, 0, 393230, 1, 0, 393222, 1, 0, 393221, 1, 0, 393220, 1, 0, 393219, 1, 0, 393218, 1, 0, 393217, 1, 0, 393223, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393229, 1, 0, 458754, 1, 0, 458753, 1, 0, 458760, 1, 0, 458767, 1, 0, 458768, 1, 0, 458769, 1, 0, 458766, 1, 0, 458762, 1, 0, 524297, 1, 0, 524296, 1, 0, 524295, 1, 0, 458758, 1, 0, 458757, 1, 0, 458756, 1, 0, 458755, 1, 0, 458765, 1, 0, 458764, 1, 0, 458759, 1, 0, 524291, 1, 0, 524290, 1, 0, 524289, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 1, 0, 524305, 1, 0, 524301, 1, 0, 524300, 1, 0, 589832, 1, 0, 589831, 1, 0, 589830, 1, 0, 524294, 1, 0, 524293, 1, 0, 524292, 1, 0, 655363, 1, 0, 589827, 1, 0, 589826, 1, 0, 589825, 1, 0, 655361, 1, 0, 720897, 1, 0, 786433, 1, 0, 851969, 1, 0, 917505, 1, 0, 851970, 1, 0, 786434, 1, 0, 720898, 1, 0, 655362, 1, 0, 720899, 1, 0, 786435, 1, 0, 851971, 1, 0, 786436, 1, 0, 720900, 1, 0, 655364, 1, 0, 589828, 1, 0, 589829, 1, 0, 655365, 1, 0, 720901, 1, 0, 655366, 1, 0, 786441, 1, 0, 720905, 1, 0, 655369, 1, 0, 655370, 1, 0, 589834, 1, 0, 589835, 1, 0, 655371, 1, 0, 720907, 1, 0, 720906, 1, 0, 786442, 1, 0, 851978, 1, 0, 851977, 1, 0, 851976, 1, 0, 786440, 1, 0, 720904, 1, 0, 720903, 1, 0, 786439, 1, 0, 786438, 1, 0, 851974, 1, 0, 851973, 1, 0, 917509, 1, 0, 917508, 1, 0, 917510, 1, 0, 917511, 1, 0, 851975, 1, 0, 917512, 1, 0, 917513, 1, 0, 917514, 1, 0, 917515, 1, 0, 851979, 1, 0, 786443, 1, 0, 786444, 1, 0, 720908, 1, 0, 655372, 1, 0, 720909, 1, 0, 786445, 1, 0, 851981, 1, 0, 851980, 1, 0, 917516, 1, 0, 917517, 1, 0, 917518, 1, 0, 851982, 1, 0, 786446, 1, 0, 786447, 1, 0, 851983, 1, 0, 917519, 1, 0, 917520, 1, 0, 851984, 1, 0, 917521, 1, 0, 655376, 1, 0, 589840, 1, 0, 589839, 1, 0, 589838, 1, 0, 589837, 1, 0, 655374, 1, 0, 655375, 1, 0, 589841, 1, 0, 655377, 1, 0, 720913, 1, 0, 720912, 1, 0, 786449, 1, 0)

[node name="BG3TileMap" type="TileMap" parent="."]
visible = false
tile_set = SubResource("TileSet_8jnc4")
format = 2
layer_0/tile_data = PackedInt32Array(-1, 2, 0, -65536, 2, 0, -65535, 2, 0, -65534, 2, 0, -65533, 2, 0, -65532, 2, 0, -65531, 2, 0, -65530, 2, 0, -65529, 2, 0, -65528, 2, 0, -65527, 2, 0, -65526, 2, 0, -65525, 2, 0, -65524, 2, 0, -65523, 2, 0, -65522, 2, 0, -65521, 2, 0, -65520, 2, 0, -65519, 2, 0, -65518, 2, 0, -65517, 2, 0, -65516, 2, 0, -65515, 2, 0, 65535, 2, 0, 131071, 2, 0, 196607, 2, 0, 262143, 2, 0, 327679, 2, 0, 393215, 2, 0, 458751, 2, 0, 524287, 2, 0, 589823, 2, 0, 655359, 2, 0, 720895, 2, 0, 786431, 2, 0, 851967, 2, 0, 917503, 2, 0, 983039, 2, 0, 1048575, 2, 0, 1114111, 2, 0, 1048576, 2, 0, 983041, 2, 0, 917506, 2, 0, 917507, 2, 0, 851972, 2, 0, 786437, 2, 0, 720902, 2, 0, 655367, 2, 0, 655368, 2, 0, 589833, 2, 0, 524298, 2, 0, 458763, 2, 0, 393228, 2, 0, 327693, 2, 0, 327694, 2, 0, 262159, 2, 0, 196624, 2, 0, 131089, 2, 0, 65554, 2, 0, 65555, 2, 0, 20, 2, 0, 21, 2, 0, 65557, 2, 0, 131093, 2, 0, 196629, 2, 0, 262165, 2, 0, 327701, 2, 0, 393237, 2, 0, 458773, 2, 0, 524309, 2, 0, 589845, 2, 0, 655381, 2, 0, 720917, 2, 0, 786453, 2, 0, 851989, 2, 0, 917525, 2, 0, 983061, 2, 0, 1048577, 2, 0, 1048578, 2, 0, 1048579, 2, 0, 1048580, 2, 0, 1048581, 2, 0, 1048582, 2, 0, 1048583, 2, 0, 1048584, 2, 0, 1048585, 2, 0, 1048586, 2, 0, 1048587, 2, 0, 1048588, 2, 0, 1048589, 2, 0, 1048590, 2, 0, 1048591, 2, 0, 1048592, 2, 0, 1048593, 2, 0, 1048594, 2, 0, 1048595, 2, 0, 1048596, 2, 0, 1048597, 2, 0, 983060, 2, 0, 917523, 2, 0, 917522, 2, 0, 851985, 2, 0, 786448, 2, 0, 720911, 2, 0, 720910, 2, 0, 655373, 2, 0, 589836, 2, 0, 524299, 2, 0, 458761, 2, 0, 393224, 2, 0, 327687, 2, 0, 327686, 2, 0, 262149, 2, 0, 196612, 2, 0, 131075, 2, 0, 131074, 2, 0, 65537, 2, 0, 0, 2, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 2, 0, 7, 2, 0, 8, 2, 0, 9, 2, 0, 10, 2, 0, 11, 2, 0, 12, 2, 0, 13, 2, 0, 14, 2, 0, 15, 2, 0, 16, 2, 0, 17, 2, 0, 18, 2, 0, 19, 2, 0, 65556, 2, 0, 131092, 2, 0, 196628, 2, 0, 262164, 2, 0, 327700, 2, 0, 393236, 2, 0, 458772, 2, 0, 524308, 2, 0, 589844, 2, 0, 655380, 2, 0, 720916, 2, 0, 786452, 2, 0, 851988, 2, 0, 917524, 2, 0, 983059, 2, 0, 983058, 2, 0, 983057, 2, 0, 983056, 2, 0, 983055, 2, 0, 983054, 2, 0, 983053, 2, 0, 983052, 2, 0, 983051, 2, 0, 983050, 2, 0, 983049, 2, 0, 983048, 2, 0, 983047, 2, 0, 983046, 2, 0, 983045, 2, 0, 983044, 2, 0, 983043, 2, 0, 983042, 2, 0, 983040, 2, 0, 917504, 2, 0, 851968, 2, 0, 786432, 2, 0, 720896, 2, 0, 655360, 2, 0, 589824, 2, 0, 524288, 2, 0, 458752, 2, 0, 393216, 2, 0, 327680, 2, 0, 262144, 2, 0, 196608, 2, 0, 131072, 2, 0, 65536, 2, 0, 65538, 2, 0, 65539, 2, 0, 65540, 2, 0, 65541, 2, 0, 65542, 2, 0, 65543, 2, 0, 65544, 2, 0, 65545, 2, 0, 65546, 2, 0, 65547, 2, 0, 65548, 2, 0, 65549, 2, 0, 65550, 2, 0, 65551, 2, 0, 65552, 2, 0, 65553, 2, 0, 131090, 2, 0, 196626, 2, 0, 262162, 2, 0, 327698, 2, 0, 393234, 2, 0, 458770, 2, 0, 524307, 2, 0, 589843, 2, 0, 655379, 2, 0, 720915, 2, 0, 786451, 2, 0, 851987, 2, 0, 851986, 2, 0, 786450, 2, 0, 720914, 2, 0, 655378, 2, 0, 589842, 2, 0, 524306, 2, 0, 458771, 2, 0, 393235, 2, 0, 327699, 2, 0, 262163, 2, 0, 196627, 2, 0, 131091, 2, 0, 131088, 2, 0, 131087, 2, 0, 131086, 2, 0, 131085, 2, 0, 131080, 2, 0, 131079, 2, 0, 131078, 2, 0, 131077, 2, 0, 131076, 2, 0, 131073, 2, 0, 196609, 2, 0, 196610, 2, 0, 131081, 2, 0, 131083, 2, 0, 131084, 2, 0, 131082, 2, 0, 196615, 2, 0, 196614, 2, 0, 196613, 2, 0, 196611, 2, 0, 262147, 2, 0, 262146, 2, 0, 262145, 2, 0, 262148, 2, 0, 196616, 2, 0, 196617, 2, 0, 196618, 2, 0, 196619, 2, 0, 196620, 2, 0, 196621, 2, 0, 196622, 2, 0, 196623, 2, 0, 196625, 2, 0, 262161, 2, 0, 262160, 2, 0, 262158, 2, 0, 262157, 2, 0, 262150, 2, 0, 262155, 2, 0, 262156, 2, 0, 262154, 2, 0, 262153, 2, 0, 262152, 2, 0, 262151, 2, 0, 327681, 2, 0, 327682, 2, 0, 327683, 2, 0, 327684, 2, 0, 327685, 2, 0, 327688, 2, 0, 327689, 2, 0, 327690, 2, 0, 327691, 2, 0, 327692, 2, 0, 327695, 2, 0, 327696, 2, 0, 327697, 2, 0, 393233, 2, 0, 393232, 2, 0, 393231, 2, 0, 393230, 2, 0, 393222, 2, 0, 393221, 2, 0, 393220, 2, 0, 393219, 2, 0, 393218, 2, 0, 393217, 2, 0, 393223, 2, 0, 393225, 2, 0, 393226, 2, 0, 393227, 2, 0, 393229, 2, 0, 458754, 2, 0, 458753, 2, 0, 458760, 2, 0, 458767, 2, 0, 458768, 2, 0, 458769, 2, 0, 458766, 2, 0, 458762, 2, 0, 524297, 2, 0, 524296, 2, 0, 524295, 2, 0, 458758, 2, 0, 458757, 2, 0, 458756, 2, 0, 458755, 2, 0, 458765, 2, 0, 458764, 2, 0, 458759, 2, 0, 524291, 2, 0, 524290, 2, 0, 524289, 2, 0, 524302, 2, 0, 524303, 2, 0, 524304, 2, 0, 524305, 2, 0, 524301, 2, 0, 524300, 2, 0, 589832, 2, 0, 589831, 2, 0, 589830, 2, 0, 524294, 2, 0, 524293, 2, 0, 524292, 2, 0, 655363, 2, 0, 589827, 2, 0, 589826, 2, 0, 589825, 2, 0, 655361, 2, 0, 720897, 2, 0, 786433, 2, 0, 851969, 2, 0, 917505, 2, 0, 851970, 2, 0, 786434, 2, 0, 720898, 2, 0, 655362, 2, 0, 720899, 2, 0, 786435, 2, 0, 851971, 2, 0, 786436, 2, 0, 720900, 2, 0, 655364, 2, 0, 589828, 2, 0, 589829, 2, 0, 655365, 2, 0, 720901, 2, 0, 655366, 2, 0, 786441, 2, 0, 720905, 2, 0, 655369, 2, 0, 655370, 2, 0, 589834, 2, 0, 589835, 2, 0, 655371, 2, 0, 720907, 2, 0, 720906, 2, 0, 786442, 2, 0, 851978, 2, 0, 851977, 2, 0, 851976, 2, 0, 786440, 2, 0, 720904, 2, 0, 720903, 2, 0, 786439, 2, 0, 786438, 2, 0, 851974, 2, 0, 851973, 2, 0, 917509, 2, 0, 917508, 2, 0, 917510, 2, 0, 917511, 2, 0, 851975, 2, 0, 917512, 2, 0, 917513, 2, 0, 917514, 2, 0, 917515, 2, 0, 851979, 2, 0, 786443, 2, 0, 786444, 2, 0, 720908, 2, 0, 655372, 2, 0, 720909, 2, 0, 786445, 2, 0, 851981, 2, 0, 851980, 2, 0, 917516, 2, 0, 917517, 2, 0, 917518, 2, 0, 851982, 2, 0, 786446, 2, 0, 786447, 2, 0, 851983, 2, 0, 917519, 2, 0, 917520, 2, 0, 851984, 2, 0, 917521, 2, 0, 655376, 2, 0, 589840, 2, 0, 589839, 2, 0, 589838, 2, 0, 589837, 2, 0, 655374, 2, 0, 655375, 2, 0, 589841, 2, 0, 655377, 2, 0, 720913, 2, 0, 720912, 2, 0, 786449, 2, 0)

[node name="BG4TileMap" type="TileMap" parent="."]
visible = false
tile_set = SubResource("TileSet_8jnc4")
format = 2
layer_0/tile_data = PackedInt32Array(-1, 3, 0, -65536, 3, 0, -65535, 3, 0, -65534, 3, 0, -65533, 3, 0, -65532, 3, 0, -65531, 3, 0, -65530, 3, 0, -65529, 3, 0, -65528, 3, 0, -65527, 3, 0, -65526, 3, 0, -65525, 3, 0, -65524, 3, 0, -65523, 3, 0, -65522, 3, 0, -65521, 3, 0, -65520, 3, 0, -65519, 3, 0, -65518, 3, 0, -65517, 3, 0, -65516, 3, 0, -65515, 3, 0, 65535, 3, 0, 131071, 3, 0, 196607, 3, 0, 262143, 3, 0, 327679, 3, 0, 393215, 3, 0, 458751, 3, 0, 524287, 3, 0, 589823, 3, 0, 655359, 3, 0, 720895, 3, 0, 786431, 3, 0, 851967, 3, 0, 917503, 3, 0, 983039, 3, 0, 1048575, 3, 0, 1114111, 3, 0, 1048576, 3, 0, 983041, 3, 0, 917506, 3, 0, 917507, 3, 0, 851972, 3, 0, 786437, 3, 0, 720902, 3, 0, 655367, 3, 0, 655368, 3, 0, 589833, 3, 0, 524298, 3, 0, 458763, 3, 0, 393228, 3, 0, 327693, 3, 0, 327694, 3, 0, 262159, 3, 0, 196624, 3, 0, 131089, 3, 0, 65554, 3, 0, 65555, 3, 0, 20, 3, 0, 21, 3, 0, 65557, 3, 0, 131093, 3, 0, 196629, 3, 0, 262165, 3, 0, 327701, 3, 0, 393237, 3, 0, 458773, 3, 0, 524309, 3, 0, 589845, 3, 0, 655381, 3, 0, 720917, 3, 0, 786453, 3, 0, 851989, 3, 0, 917525, 3, 0, 983061, 3, 0, 1048577, 3, 0, 1048578, 3, 0, 1048579, 3, 0, 1048580, 3, 0, 1048581, 3, 0, 1048582, 3, 0, 1048583, 3, 0, 1048584, 3, 0, 1048585, 3, 0, 1048586, 3, 0, 1048587, 3, 0, 1048588, 3, 0, 1048589, 3, 0, 1048590, 3, 0, 1048591, 3, 0, 1048592, 3, 0, 1048593, 3, 0, 1048594, 3, 0, 1048595, 3, 0, 1048596, 3, 0, 1048597, 3, 0, 983060, 3, 0, 917523, 3, 0, 917522, 3, 0, 851985, 3, 0, 786448, 3, 0, 720911, 3, 0, 720910, 3, 0, 655373, 3, 0, 589836, 3, 0, 524299, 3, 0, 458761, 3, 0, 393224, 3, 0, 327687, 3, 0, 327686, 3, 0, 262149, 3, 0, 196612, 3, 0, 131075, 3, 0, 131074, 3, 0, 65537, 3, 0, 0, 3, 0, 1, 3, 0, 2, 3, 0, 3, 3, 0, 4, 3, 0, 5, 3, 0, 6, 3, 0, 7, 3, 0, 8, 3, 0, 9, 3, 0, 10, 3, 0, 11, 3, 0, 12, 3, 0, 13, 3, 0, 14, 3, 0, 15, 3, 0, 16, 3, 0, 17, 3, 0, 18, 3, 0, 19, 3, 0, 65556, 3, 0, 131092, 3, 0, 196628, 3, 0, 262164, 3, 0, 327700, 3, 0, 393236, 3, 0, 458772, 3, 0, 524308, 3, 0, 589844, 3, 0, 655380, 3, 0, 720916, 3, 0, 786452, 3, 0, 851988, 3, 0, 917524, 3, 0, 983059, 3, 0, 983058, 3, 0, 983057, 3, 0, 983056, 3, 0, 983055, 3, 0, 983054, 3, 0, 983053, 3, 0, 983052, 3, 0, 983051, 3, 0, 983050, 3, 0, 983049, 3, 0, 983048, 3, 0, 983047, 3, 0, 983046, 3, 0, 983045, 3, 0, 983044, 3, 0, 983043, 3, 0, 983042, 3, 0, 983040, 3, 0, 917504, 3, 0, 851968, 3, 0, 786432, 3, 0, 720896, 3, 0, 655360, 3, 0, 589824, 3, 0, 524288, 3, 0, 458752, 3, 0, 393216, 3, 0, 327680, 3, 0, 262144, 3, 0, 196608, 3, 0, 131072, 3, 0, 65536, 3, 0, 65538, 3, 0, 65539, 3, 0, 65540, 3, 0, 65541, 3, 0, 65542, 3, 0, 65543, 3, 0, 65544, 3, 0, 65545, 3, 0, 65546, 3, 0, 65547, 3, 0, 65548, 3, 0, 65549, 3, 0, 65550, 3, 0, 65551, 3, 0, 65552, 3, 0, 65553, 3, 0, 131090, 3, 0, 196626, 3, 0, 262162, 3, 0, 327698, 3, 0, 393234, 3, 0, 458770, 3, 0, 524307, 3, 0, 589843, 3, 0, 655379, 3, 0, 720915, 3, 0, 786451, 3, 0, 851987, 3, 0, 851986, 3, 0, 786450, 3, 0, 720914, 3, 0, 655378, 3, 0, 589842, 3, 0, 524306, 3, 0, 458771, 3, 0, 393235, 3, 0, 327699, 3, 0, 262163, 3, 0, 196627, 3, 0, 131091, 3, 0, 131088, 3, 0, 131087, 3, 0, 131086, 3, 0, 131085, 3, 0, 131080, 3, 0, 131079, 3, 0, 131078, 3, 0, 131077, 3, 0, 131076, 3, 0, 131073, 3, 0, 196609, 3, 0, 196610, 3, 0, 131081, 3, 0, 131083, 3, 0, 131084, 3, 0, 131082, 3, 0, 196615, 3, 0, 196614, 3, 0, 196613, 3, 0, 196611, 3, 0, 262147, 3, 0, 262146, 3, 0, 262145, 3, 0, 262148, 3, 0, 196616, 3, 0, 196617, 3, 0, 196618, 3, 0, 196619, 3, 0, 196620, 3, 0, 196621, 3, 0, 196622, 3, 0, 196623, 3, 0, 196625, 3, 0, 262161, 3, 0, 262160, 3, 0, 262158, 3, 0, 262157, 3, 0, 262150, 3, 0, 262155, 3, 0, 262156, 3, 0, 262154, 3, 0, 262153, 3, 0, 262152, 3, 0, 262151, 3, 0, 327681, 3, 0, 327682, 3, 0, 327683, 3, 0, 327684, 3, 0, 327685, 3, 0, 327688, 3, 0, 327689, 3, 0, 327690, 3, 0, 327691, 3, 0, 327692, 3, 0, 327695, 3, 0, 327696, 3, 0, 327697, 3, 0, 393233, 3, 0, 393232, 3, 0, 393231, 3, 0, 393230, 3, 0, 393222, 3, 0, 393221, 3, 0, 393220, 3, 0, 393219, 3, 0, 393218, 3, 0, 393217, 3, 0, 393223, 3, 0, 393225, 3, 0, 393226, 3, 0, 393227, 3, 0, 393229, 3, 0, 458754, 3, 0, 458753, 3, 0, 458760, 3, 0, 458767, 3, 0, 458768, 3, 0, 458769, 3, 0, 458766, 3, 0, 458762, 3, 0, 524297, 3, 0, 524296, 3, 0, 524295, 3, 0, 458758, 3, 0, 458757, 3, 0, 458756, 3, 0, 458755, 3, 0, 458765, 3, 0, 458764, 3, 0, 458759, 3, 0, 524291, 3, 0, 524290, 3, 0, 524289, 3, 0, 524302, 3, 0, 524303, 3, 0, 524304, 3, 0, 524305, 3, 0, 524301, 3, 0, 524300, 3, 0, 589832, 3, 0, 589831, 3, 0, 589830, 3, 0, 524294, 3, 0, 524293, 3, 0, 524292, 3, 0, 655363, 3, 0, 589827, 3, 0, 589826, 3, 0, 589825, 3, 0, 655361, 3, 0, 720897, 3, 0, 786433, 3, 0, 851969, 3, 0, 917505, 3, 0, 851970, 3, 0, 786434, 3, 0, 720898, 3, 0, 655362, 3, 0, 720899, 3, 0, 786435, 3, 0, 851971, 3, 0, 786436, 3, 0, 720900, 3, 0, 655364, 3, 0, 589828, 3, 0, 589829, 3, 0, 655365, 3, 0, 720901, 3, 0, 655366, 3, 0, 786441, 3, 0, 720905, 3, 0, 655369, 3, 0, 655370, 3, 0, 589834, 3, 0, 589835, 3, 0, 655371, 3, 0, 720907, 3, 0, 720906, 3, 0, 786442, 3, 0, 851978, 3, 0, 851977, 3, 0, 851976, 3, 0, 786440, 3, 0, 720904, 3, 0, 720903, 3, 0, 786439, 3, 0, 786438, 3, 0, 851974, 3, 0, 851973, 3, 0, 917509, 3, 0, 917508, 3, 0, 917510, 3, 0, 917511, 3, 0, 851975, 3, 0, 917512, 3, 0, 917513, 3, 0, 917514, 3, 0, 917515, 3, 0, 851979, 3, 0, 786443, 3, 0, 786444, 3, 0, 720908, 3, 0, 655372, 3, 0, 720909, 3, 0, 786445, 3, 0, 851981, 3, 0, 851980, 3, 0, 917516, 3, 0, 917517, 3, 0, 917518, 3, 0, 851982, 3, 0, 786446, 3, 0, 786447, 3, 0, 851983, 3, 0, 917519, 3, 0, 917520, 3, 0, 851984, 3, 0, 917521, 3, 0, 655376, 3, 0, 589840, 3, 0, 589839, 3, 0, 589838, 3, 0, 589837, 3, 0, 655374, 3, 0, 655375, 3, 0, 589841, 3, 0, 655377, 3, 0, 720913, 3, 0, 720912, 3, 0, 786449, 3, 0)

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
